--- a/package.json
+++ b/package.json
@@ -11,7 +11,25 @@
     "mysql2": "^3.2.0",
     "npm": "^9.6.2",
     "react-spotify-web-playback": "^0.13.3",
+    "router": "^1.3.8",
     "sequelize": "^6.29.3",
     "spotify-web-api-node": "^5.0.2"
-  }
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "name": "notes-and-quotes-be",
+  "description": "",
+  "version": "1.0.0",
+  "main": "server.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Raflores10/notes-and-quotes-be.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Raflores10/notes-and-quotes-be/issues"
+  },
+  "homepage": "https://github.com/Raflores10/notes-and-quotes-be#readme"
 }
