--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "cluster": "^0.7.7",
+    "connect-history-api-fallback": "^2.0.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -10,7 +13,10 @@
     "lyrics-finder": "^21.7.0",
     "mysql2": "^3.2.0",
     "npm": "^9.6.2",
+    "path": "^0.12.7",
+    "querystring": "^0.2.1",
     "react-spotify-web-playback": "^0.13.3",
+    "request": "^2.88.2",
     "router": "^1.3.8",
     "sequelize": "^6.29.3",
     "spotify-web-api-node": "^5.0.2"
@@ -18,7 +24,6 @@
   "scripts": {
     "start": "node server.js",
     "seed": "node seeds/index.js"
-    
   },
   "name": "notes-and-quotes-be",
   "description": "",
